--- a/src/hw03/q03.html
+++ b/src/hw03/q03.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <h1> DOM </h1>
+  <a id="enlace" href="https://www.google.com">Google</a>
+  <h2 id="root">MANIPULANDO EL DOM</h2>
   <div id="root"></div>
   <script src="q03.js"></script>
 </body>
